Update Main Page with few images and bootstamp functions

--- a/personal.html
+++ b/personal.html
@@ -16,7 +16,7 @@
           <div class="col-md-2">
             <h3>Saswati Patra</h3>
             <br>
-            <p>Full Stack Developer</p>
+            <p>Epicodus Student</p>
             <p><a href="mailto:webmaster@example.com">Email id: Saswati Patra</a>
               </p>
             <p>Contact No.: ***-***-****</p>
