Update with few css function

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class="back-color1 well">
         <div class="row">
           <div class="col-md-2">
-            <img src="https://media.licdn.com/dms/image/C5603AQGh4Kxmiuo_Eg/profile-displayphoto-shrink_200_200/0?e=1563408000&v=beta&t=XbitJZGzyDxcMxCUTZuGO4L69kM4oGETmdsC4KX9wEE" class="img-responsive img-rounded" alt="Profile Pic">
+            <img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.0-9/55731090_2574065992663435_6036581413610848256_o.jpg?_nc_cat=111&_nc_oc=AQlgoPJzu42NfeTvY7LSqDEPURdnblH_9oAEWQr28PDCXSvVS-WUidWDSYwbqm-UoJ-sQTFC5M1pWyd8sZMJ9XrH&_nc_ht=scontent-sea1-1.xx&oh=d7c48069bbd3f0113f366b773dd2e0e8&oe=5D9DC708" class="img-responsive img-rounded" alt="Profile Pic">
           </div>
           <div class="col-md-2">
             <h3>Saswati Patra</h3>
@@ -63,23 +63,23 @@
             </blockquote>
             <blockquote class="bg-info rounded">
               <li> Cooking <img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.0-9/17796327_1846600058888413_4453444636296563366_n.jpg?_nc_cat=106&_nc_oc=AQnxSrEGNuceln4SoRP4meftDDlA4zqV5RQ6l0jsVkpif4IpC0VLAgvdz9gXnvEA5XTJ6HZ3lJo57jJZlPXxYmBw&_nc_ht=scontent-sea1-1.xx&oh=62cdb2e06fa5c33d27c8a7b1ed88ec4e&oe=5D8C84FE" class="img-responsive img-rounded" alt="Profile Pic"></li>
-              <footer>- My first sketch</footer>
+              <footer>- Birthday Treat</footer>
             </blockquote>
             <blockquote class="bg-info rounded">
               <li> Traveling <img src="https://scontent-sea1-1.xx.fbcdn.net/v/t31.0-8/16716150_1393533227383390_2537677453689264431_o.jpg?_nc_cat=109&_nc_oc=AQmYnxtwEZwyjXRfn3NdWiF7UpzKsDdnfSmU0Ld2uXW6dDiVTmN4SVtRxOotNs8eVn80_I3ObrRacTAeBWxPim2T&_nc_ht=scontent-sea1-1.xx&oh=ce1035340cc48cf97da66729e503781e&oe=5D9A1543" class="img-responsive img-rounded" alt="Profile Pic"></li>
-              <footer>- My first sketch</footer>
+              <footer>- Selfi with cloud @Nandi Hill (INDIA)</footer>
             </blockquote>
             <blockquote class="bg-info rounded">
               <li> Adventure things <img src="https://scontent-sea1-1.xx.fbcdn.net/v/t31.0-8/17545260_1433115433425169_5833985874977186720_o.jpg?_nc_cat=104&_nc_oc=AQkbgGdwI1D_4IB_fUL8RaZwXRgQtj3IISFEaSoGyTGBE1cMATL33JluRrOGlxGtzAUe1jJfgf3F8QB7xmbWbrjN&_nc_ht=scontent-sea1-1.xx&oh=94add416390d1b6166e0a0e2877a6516&oe=5D95F643" class="img-responsive img-rounded" alt="Profile Pic"></li>
-              <footer>- My first sketch</footer>
+              <footer>- Having Fun.....</footer>
             </blockquote>
             <blockquote class="bg-info rounded">
               <li> Dancing <img src="https://scontent-sea1-1.xx.fbcdn.net/v/t31.0-8/26850063_1807751842628191_265882196470319987_o.jpg?_nc_cat=100&_nc_oc=AQmspufD_xblYoCmsGUMeDVEqUEL9KpeABPaqpJUVNJeQnD4AyKUzeguUBhZwWMLWBj5-ec5f0TONLqTOW7aaxqf&_nc_ht=scontent-sea1-1.xx&oh=049b9d3183063a07e9111463d9823855&oe=5D57ACD6" class="img-responsive img-rounded" alt="Profile Pic"></li>
-              <footer>- My first sketch</footer>
+              <footer>- Posing after stage performance </footer>
             </blockquote>
             <blockquote class="bg-info rounded">
               <li> Music...<img src="https://scontent-sea1-1.xx.fbcdn.net/v/t31.0-8/19780680_1566701353399909_491650421344239670_o.jpg?_nc_cat=101&_nc_oc=AQkW5HSEiAm2gJV55b-5ptl3l4rCOkDnRW4Fjlq0OgXtKunaQ6Ea_hNp3GZ7JoXFNGPK1VJlBc1LwMOrP16cr4R9&_nc_ht=scontent-sea1-1.xx&oh=11fe2f363a5da29a006306f2b51f5d51&oe=5D982AB7" class="img-responsive img-rounded" alt="Profile Pic"></li>
-              <footer>- My first sketch</footer>
+              <footer>- playing sa re ga ma pa...</footer>
             </blockquote>
           </ul>
         </div>
