--- a/personal.html
+++ b/personal.html
@@ -3,7 +3,7 @@
   <head>
     <title>PROFESSIONAL Portfolio</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/styles1.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div class="container">
@@ -55,7 +55,7 @@
         <h5>Amazon Development Centre,Chennai INDIA (2015-2018)</h5>
         <h6>Occupation: Senior Image Quality Associate </h6>
         <h6>Job Description:</h6>
-          <p>Responsible for operations supporting the post-production of high-quality imagery to deliver a best-in-class e-commerce customer experience. These roles require analytical, communication skills as well as a high attention to detail. To drives innovation through constant reevaluation of existing workflows and development of new processes to keep our team producing imagery at the highest-possible efficiency and quality</p>
+          <p1>Responsible for operations supporting the post-production of high-quality imagery to deliver a best-in-class e-commerce customer experience. These roles require analytical, communication skills as well as a high attention to detail. To drives innovation through constant reevaluation of existing workflows and development of new processes to keep our team producing imagery at the highest-possible efficiency and quality</p1>
         <h5>Responsibilities:</h5>
           <ul>
             <li>Individual Goal:</li>
