--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           <div class="col-md-2 sidebar-font">
             <br>
             <p>
-              <a href="mailto:webmaster@example.com">Linked-in</a></p>
-            <p><a href="mailto:webmaster@example.com">Git-Hub</a></p>
+              <a href="https://www.linkedin.com/">Linked-in</a></p>
+            <p><a href="https://github.com/">Git-Hub</a></p>
           </div>
         </div>
       </div>
